# my-cmake

./: .gitignore  CMakeLists.txt  README.md  main.cc  testinput.txt
include/markov/: markov.hh
include/markov/random/: irandom-gen.hh  simple-random-gen.hh
src/: markov.cc
test/: CMakeLists.txt  markov_test.cc
